--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
     color: #eee;
 }
 
-.cronometro, .botoes {
+.cronometro,
+.botoes {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,12 +49,12 @@ i {
 }
 
 @media (max-width: 425px) {
- span {
-    font-size: 60px;
-    margin-top: 40px;
- }
+    span {
+        font-size: 60px;
+        margin-top: 40px;
+    }
 
- i {
-    font-size: 40px;
- }
+    i {
+        font-size: 40px;
+    }
 }
